# surf-forecast

./: .gitignore  fetch_buoy.py  fetch_openmeteo.py  load_to_duckdb.py  main.py  pyproject.toml  schema.sql
.github/workflows/: daily_pipeline.yml
surf_forecast/: .gitignore  dbt_project.yml  profiles.yml
surf_forecast/macros/: degrees_to_compass.sql
surf_forecast/models/marts/: fct_forecast_accuracy.sql  fct_marine_forecasts.sql  fct_surf_conditions.sql
surf_forecast/models/staging/: _sources.yml  schema.yml  stg_buoy_observations.sql  stg_marine_forecasts.sql
